Added CRUD for User Identity into UsersAPI, implemented SeriLog
