# src/TicketManagement.WebUI/OpenAPIs/swagger.json
@@ -375,107 +375,6 @@
           }
         }
       }
-    },
-    "/api/Users/register": {
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "operationId": "Users_Register",
-        "requestBody": {
-          "x-name": "model",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RegisterModel"
-              }
-            }
-          },
-          "required": true,
-          "x-position": 1
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/octet-stream": {
-                "schema": {
-                  "type": "string",
-                  "format": "binary"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Users/Login": {
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Login into the new API.",
-        "description": "Here is the code sample of usage.",
-        "operationId": "Users_Login",
-        "requestBody": {
-          "x-name": "model",
-          "description": ".",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/LoginModel"
-              }
-            }
-          },
-          "required": true,
-          "x-position": 1
-        },
-        "responses": {
-          "200": {
-            "description": "..",
-            "content": {
-              "application/octet-stream": {
-                "schema": {
-                  "type": "string",
-                  "format": "binary"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Users/validate": {
-      "get": {
-        "tags": [
-          "Users"
-        ],
-        "operationId": "Users_Validate",
-        "parameters": [
-          {
-            "name": "token",
-            "in": "query",
-            "schema": {
-              "type": "string",
-              "nullable": true
-            },
-            "x-position": 1
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/octet-stream": {
-                "schema": {
-                  "type": "string",
-                  "format": "binary"
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components": {
@@ -567,56 +466,6 @@
           "instance": {
             "type": "string",
             "nullable": true
-          }
-        }
-      },
-      "RegisterModel": {
-        "type": "object",
-        "additionalProperties": false,
-        "required": [
-          "email",
-          "password"
-        ],
-        "properties": {
-          "email": {
-            "title": "Email",
-            "type": "string",
-            "format": "email",
-            "minLength": 1
-          },
-          "password": {
-            "title": "Password",
-            "type": "string",
-            "maxLength": 100,
-            "minLength": 6
-          },
-          "confirmPassword": {
-            "title": "Confirm password",
-            "type": "string",
-            "nullable": true
-          }
-        }
-      },
-      "LoginModel": {
-        "type": "object",
-        "additionalProperties": false,
-        "required": [
-          "email",
-          "password"
-        ],
-        "properties": {
-          "email": {
-            "type": "string",
-            "format": "email",
-            "minLength": 1
-          },
-          "password": {
-            "type": "string",
-            "minLength": 1
-          },
-          "rememberMe": {
-            "title": "Remember me?",
-            "type": "boolean"
           }
         }
       }
